intentando refactorizar pero no :)

--- a/module-1/lab-string-operations/your-code/challenge-2.ipynb
+++ b/module-1/lab-string-operations/your-code/challenge-2.ipynb
@@ -72,19 +72,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['doc1.txt', 'doc2.txt', 'doc3.txt']\n",
       "['Ironhack is cool.', 'I love Ironhack.', 'I am a student at Ironhack.']\n"
      ]
     }
    ],
    "source": [
+    "import os \n",
     "files = sorted([f for f in os.listdir('../your-code') if f.endswith('.txt')])\n",
     "leer =[open(f, 'r').readlines()[0] for f in files] \n",
     "print(leer)"
@@ -99,12 +99,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
     "#with open(\"doc1.txt\") as file: corpus = [corpus for corpus in file]\n",
-    "import os\n",
+    "\n",
     "#files = [f for f in os.listdir('../your-code') if f.endswith('.txt')]"
    ]
   },
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -156,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -181,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -201,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -224,14 +224,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['i', 'at', 'ironhack', 'student', 'is', 'a', 'love', 'am', 'cool']\n"
+      "['i', 'love', 'a', 'at', 'ironhack', 'student', 'am', 'is', 'cool']\n"
      ]
     }
    ],
@@ -248,20 +248,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0, 0, 0, 0, 1, 0, 0, 1, 1], [1, 1, 0, 0, 1, 0, 0, 0, 0], [1, 0, 1, 1, 1, 1, 1, 0, 0]]\n"
+     ]
+    }
+   ],
    "source": [
     "term_freq=[]\n",
     "\n",
     "for f in corpus:\n",
     "    z=[]\n",
-    "    for i in bag_of_words:\n",
-    "        z.append(f.split(\" \").count(i))\n",
+    "    for i in bag_of_words: z.append(f.split(\" \").count(i))\n",
     "    term_freq.append(z)\n",
-    "    \n",
-    "#term_freq = [frec.append(corpus.count(w)) for x in corpus]\n",
     "\n",
+    "\n",
+    "#for w in corpus: term_freq.append(corpus.count(w))\n",
+    "print(term_freq) \n",
     "#for w in corpus:\n",
     " #    term_freq.append(corpus.count(w))\n",
     "        \n",
@@ -276,6 +284,13 @@
     "\n",
     "```[[1, 1, 1, 0, 0, 0, 0, 0, 0], [1, 0, 0, 1, 1, 0, 0, 0, 0], [1, 0, 0, 1, 0, 1, 1, 1, 1]]```"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -353,10 +368,10 @@
    "source": [
     "stop_words = ['all', 'six', 'less', 'being', 'indeed', 'over', 'move', 'anyway', 'fifty', 'four', 'not', 'own', 'through', 'yourselves', 'go', 'where', 'mill', 'only', 'find', 'before', 'one', 'whose', 'system', 'how', 'somewhere', 'with', 'thick', 'show', 'had', 'enough', 'should', 'to', 'must', 'whom', 'seeming', 'under', 'ours', 'has', 'might', 'thereafter', 'latterly', 'do', 'them', 'his', 'around', 'than', 'get', 'very', 'de', 'none', 'cannot', 'every', 'whether', 'they', 'front', 'during', 'thus', 'now', 'him', 'nor', 'name', 'several', 'hereafter', 'always', 'who', 'cry', 'whither', 'this', 'someone', 'either', 'each', 'become', 'thereupon', 'sometime', 'side', 'two', 'therein', 'twelve', 'because', 'often', 'ten', 'our', 'eg', 'some', 'back', 'up', 'namely', 'towards', 'are', 'further', 'beyond', 'ourselves', 'yet', 'out', 'even', 'will', 'what', 'still', 'for', 'bottom', 'mine', 'since', 'please', 'forty', 'per', 'its', 'everything', 'behind', 'un', 'above', 'between', 'it', 'neither', 'seemed', 'ever', 'across', 'she', 'somehow', 'be', 'we', 'full', 'never', 'sixty', 'however', 'here', 'otherwise', 'were', 'whereupon', 'nowhere', 'although', 'found', 'alone', 're', 'along', 'fifteen', 'by', 'both', 'about', 'last', 'would', 'anything', 'via', 'many', 'could', 'thence', 'put', 'against', 'keep', 'etc', 'amount', 'became', 'ltd', 'hence', 'onto', 'or', 'con', 'among', 'already', 'co', 'afterwards', 'formerly', 'within', 'seems', 'into', 'others', 'while', 'whatever', 'except', 'down', 'hers', 'everyone', 'done', 'least', 'another', 'whoever', 'moreover', 'couldnt', 'throughout', 'anyhow', 'yourself', 'three', 'from', 'her', 'few', 'together', 'top', 'there', 'due', 'been', 'next', 'anyone', 'eleven', 'much', 'call', 'therefore', 'interest', 'then', 'thru', 'themselves', 'hundred', 'was', 'sincere', 'empty', 'more', 'himself', 'elsewhere', 'mostly', 'on', 'fire', 'am', 'becoming', 'hereby', 'amongst', 'else', 'part', 'everywhere', 'too', 'herself', 'former', 'those', 'he', 'me', 'myself', 'made', 'twenty', 'these', 'bill', 'cant', 'us', 'until', 'besides', 'nevertheless', 'below', 'anywhere', 'nine', 'can', 'of', 'your', 'toward', 'my', 'something', 'and', 'whereafter', 'whenever', 'give', 'almost', 'wherever', 'is', 'describe', 'beforehand', 'herein', 'an', 'as', 'itself', 'at', 'have', 'in', 'seem', 'whence', 'ie', 'any', 'fill', 'again', 'hasnt', 'inc', 'thereby', 'thin', 'no', 'perhaps', 'latter', 'meanwhile', 'when', 'detail', 'same', 'wherein', 'beside', 'also', 'that', 'other', 'take', 'which', 'becomes', 'you', 'if', 'nobody', 'see', 'though', 'may', 'after', 'upon', 'most', 'hereupon', 'eight', 'but', 'serious', 'nothing', 'such', 'why', 'a', 'off', 'whereby', 'third', 'i', 'whole', 'noone', 'sometimes', 'well', 'amoungst', 'yours', 'their', 'rather', 'without', 'so', 'five', 'the', 'first', 'whereas', 'once']\n",
     "\n",
-    "files = sorted([f for f in os.listdir('../your-code') if f.endswith('.txt')])\n",
-    "leer =[open(f, 'r').readlines()[0] for f in files] \n",
-    "corpus = [w.lower().replace(\".\",\"\") for w in leer] \n",
-    "bag_of_words= (list(set(\" \".join(corpus).split())))\n",
+    "files = sorted([f for f in os.listdir('../your-code') if f.endswith('.txt')]) #recorro la carpeta y cojo los archivos que terminen en txt. los ordeno\n",
+    "leer =[open(f, 'r').readlines()[0] for f in files] #leo los archivos y hago una lista con lo que tengan. \n",
+    "corpus = [w.lower().replace(\".\",\"\") for w in leer] # lo paso a minusculas y quito punto\n",
+    "bag_of_words= (list(set(\" \".join(corpus).split()))) #hago una lista de elemtntos unicos de corpus\n",
     "print(bag_of_words)\n",
     "term_freq=[]\n",
     "for f in corpus:\n",
@@ -365,7 +380,7 @@
     "        z.append(f.split(\" \").count(i))\n",
     "    term_freq.append(z)\n",
     "print(term_freq)\n",
-    "cleaned_list = [dd for dd in bag_of_words if dd not in stop_words ]\n",
+    "cleaned_list = [dd for dd in bag_of_words if dd not in stop_words ] #compruebo y si repite quito\n",
     "print(cleaned_list)\n",
     "\n"
    ]
