--- a/module-1/lab-string-operations/your-code/challenge-2.ipynb
+++ b/module-1/lab-string-operations/your-code/challenge-2.ipynb
@@ -72,11 +72,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Ironhack is cool.\n",
+      "I love Ironhack.\n",
+      "I am a student at Ironhack.\n"
+     ]
+    }
+   ],
    "source": [
-    "docs = ['doc1.txt', 'doc2.txt', 'doc3.txt']"
+    "docs = ['doc1.txt', 'doc2.txt', 'doc3.txt']\n",
+    "f1=open(\"doc1.txt\", \"r\")\n",
+    "if f1.mode == 'r':\n",
+    "    contents1 =f1.read()\n",
+    "    print(contents1)\n",
+    "f2=open(\"doc2.txt\", \"r\")\n",
+    "if f2.mode == 'r':\n",
+    "    contents2 =f2.read()\n",
+    "    print(contents2)\n",
+    "f3=open(\"doc3.txt\", \"r\")\n",
+    "if f3.mode == 'r':\n",
+    "    contents3 =f3.read()\n",
+    "    print(contents3)    \n",
+    "    "
    ]
   },
   {
@@ -88,13 +111,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Ironhack is cool.', 'I love Ironhack.', 'I am a student at Ironhack.']\n"
+     ]
+    }
+   ],
    "source": [
     "corpus = []\n",
     "\n",
-    "# Write your code here\n"
+    "# Write your code here\n",
+    "corpus.append(contents1)\n",
+    "corpus.append(contents2)\n",
+    "corpus.append(contents3)\n",
+    "print(corpus)"
    ]
   },
   {
@@ -106,9 +141,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Ironhack is cool.', 'I love Ironhack.', 'I am a student at Ironhack.']\n"
+     ]
+    }
+   ],
    "source": [
     "print(corpus)"
    ]
@@ -136,11 +179,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['ironhack is cool', 'i love ironhack', 'i am a student at ironhack']\n"
+     ]
+    }
+   ],
    "source": [
-    "# Write your code here"
+    "# Write your code here\n",
+    "import re\n",
+    "def remove_punct(text):\n",
+    "    new_words = []\n",
+    "    for word in text:\n",
+    "        w = re.sub(r'[^\\w\\s]','',word) \n",
+    "        w = re.sub(r'\\_','',w)\n",
+    "        new_words.append(w)\n",
+    "    return new_words\n",
+    "corpus2 = remove_punct(corpus)\n",
+    "corpus3 = []\n",
+    "for wds in corpus2:\n",
+    "    corpus3.append(wds.lower())\n",
+    "\n",
+    "print(corpus3)"
    ]
   },
   {
@@ -152,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -172,11 +237,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 11,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['ironhack', 'is', 'cool', 'i', 'love', 'am', 'a', 'student', 'at']\n"
+     ]
+    }
+   ],
    "source": [
-    "# Write your code here"
+    "# Write your code here\n",
+    "corpus4 = [wrd for line in corpus3 for wrd in line.split()]\n",
+    "\n",
+    "for wdss in corpus4:\n",
+    "    if wdss not in bag_of_words:\n",
+    "        bag_of_words.append(wdss)\n",
+    "print(bag_of_words)\n"
    ]
   },
   {
@@ -192,9 +273,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['ironhack', 'is', 'cool', 'i', 'love', 'am', 'a', 'student', 'at']\n"
+     ]
+    }
+   ],
    "source": [
     "print(bag_of_words)"
    ]
@@ -208,13 +297,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
     "term_freq = []\n",
     "\n",
-    "# Write your code here"
+    "# Write your code here\n",
+    "for trms in corpus3:\n",
+    "    bag = []\n",
+    "    for wwds in bag_of_words:\n",
+    "        if wwds in trms.split(\" \"):\n",
+    "            bag.append(1)\n",
+    "        else:\n",
+    "            bag.append(0)\n",
+    "    term_freq.append(bag)\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
+    "term_freq = []\n",
+    "\n",
+    "# Write your code here\n",
+    "\n",
+    "cont=0\n",
+    "for trms in corpus3:\n",
+    "    for wwds in bag_of_words:\n",
+    "        if wwds in trms.split(\" \"):\n",
+    "            #bag[.append[trms] += 1\n",
+    "            cont+=1\n",
+    "        \n",
+    "    term_freq.append(cont)\n",
+    " \n",
+    "print(corpus3)\n",
+    "print(term_freq)\n",
+    "\n",
+    "\n",
+    "### Aqui estoy intentando establecer un contador, en el que si\n",
+    "### en una misma frase una palabra se repite 2 veces, cuente 2,\n",
+    "### al contrario de lo que sucede con el código anterior"
    ]
   },
   {
@@ -228,9 +353,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1, 1, 1, 0, 0, 0, 0, 0, 0], [1, 0, 0, 1, 1, 0, 0, 0, 0], [1, 0, 0, 1, 0, 1, 1, 1, 1]]\n"
+     ]
+    }
+   ],
    "source": [
     "print(term_freq)"
    ]
@@ -333,7 +466,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.5.2"
   }
  },
  "nbformat": 4,
