--- a/module-1/lab-string-operations/your-code/challenge-1.ipynb
+++ b/module-1/lab-string-operations/your-code/challenge-1.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,12 +33,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Durante un tiempo no estuvo segura de si su marido era su marido.\n"
+     ]
+    }
+   ],
    "source": [
     "str_list = ['Durante', 'un', 'tiempo', 'no', 'estuvo', 'segura', 'de', 'si', 'su', 'marido', 'era', 'su', 'marido']\n",
-    "# Your code here:\n"
+    "# Your code here:\n",
+    "\n",
+    "phrase = \" \".join(str_list)\n",
+    "dot = ('.')\n",
+    "f_phrase = phrase + dot\n",
+    "print(f_phrase)\n"
    ]
   },
   {
@@ -50,12 +63,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 107,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Grocery list: bananas, bread, brownie mix, broccoli\n"
+     ]
+    }
+   ],
    "source": [
     "food_list = ['Bananas', 'Chocolate', 'bread', 'diapers', 'Ice Cream', 'Brownie Mix', 'broccoli']\n",
-    "# Your code here:\n"
+    "# Your code here:\n",
+    "b_food = []\n",
+    "for food in food_list:\n",
+    "    if food.startswith(\"B\"):\n",
+    "        b_food += [food]\n",
+    "    elif food.startswith(\"b\"):\n",
+    "        b_food += [food] \n",
+    "        \n",
+    "b_food = \", \".join(b_food)\n",
+    "ls_food = b_food.lower()\n",
+    "\n",
+    "n_food = 'Grocery list: '+ ls_food\n",
+    "\n",
+    "print(n_food)"
    ]
   },
   {
@@ -69,9 +103,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 126,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The area of the circle with radius: 4.5 is: 63.61725123519331\n"
+     ]
+    }
+   ],
    "source": [
     "import math\n",
     "\n",
@@ -88,9 +130,12 @@
     "    # Sample Output: 78.53981633\n",
     "    \n",
     "    # Your code here:\n",
+    "    c_area = pi*(x**2)\n",
+    "    return c_area \n",
     "    \n",
-    "    \n",
-    "# Your output string here:"
+    "# Your output string here:\n",
+    "\n",
+    "print(string1,radius,string2,area(radius))"
    ]
   },
   {
@@ -106,9 +151,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 232,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'know': 1, 'And': 1, 'suffice': 1, 'those': 1, 'what': 1, 'if': 1, 'for': 1, 'in': 2, 'But': 1, 'I’ve': 1, 'will': 1, 'would': 1, 'with': 1, 'hate': 1, 'Is': 1, 'enough': 1, 'it': 1, 'twice': 1, 'that': 1, 'From': 1, 'say': 3, 'to': 1, 'who': 1, 'great': 1, 'To': 1, 'of': 2, 'perish': 1, 'I': 3, 'the': 1, 'end': 1, 'desire': 1, 'think': 1, 'tasted': 1, 'had': 1, 'ice': 2, 'favor': 1, 'destruction': 1, 'also': 1, 'Some': 2, 'world': 1, 'hold': 1, 'fire': 2}\n"
+     ]
+    }
+   ],
    "source": [
     "poem = \"\"\"Some say the world will end in fire,\n",
     "Some say in ice.\n",
@@ -120,7 +175,15 @@
     "Is also great\n",
     "And would suffice.\"\"\"\n",
     "\n",
-    "# Your code here:\n"
+    "# Your code here:\n",
+    "import re\n",
+    "x_poem = re.split(',|\\.|\\s*|\\n*',poem)\n",
+    "w_poem = ' '.join(x_poem).split()\n",
+    "\n",
+    "dic_poem = dict()\n",
+    "for word in w_poem:\n",
+    "    dic_poem[word] = dic_poem.get(word, 0) +1\n",
+    "print(dic_poem)\n"
    ]
   },
   {
@@ -132,9 +195,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 231,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['i', 'was', 'angry', 'with', 'my', 'friend', 'i', 'told', 'my', 'wrath', 'my', 'wrath', 'did', 'end', 'i', 'was', 'angry', 'with', 'my', 'foe', 'i', 'told', 'not', 'my', 'wrath', 'did', 'grow', 'i', 'waterd', 'fears', 'night', '&', 'morning', 'with', 'my', 'tears', 'i', 'sunned', 'with', 'smiles', 'with', 'soft', 'deceitful', 'wiles', 'grew', 'both', 'day', 'night', 'till', 'bore', 'apple', 'bright', 'my', 'foe', 'beheld', 'shine', 'he', 'knew', 'that', 'was', 'mine', 'into', 'my', 'garden', 'stole', 'when', 'night', 'had', 'veild', 'pole', 'morning', 'glad', 'i', 'see', 'my', 'foe', 'outstretched', 'beneath', 'tree']\n"
+     ]
+    }
+   ],
    "source": [
     "blacklist = ['and', 'as', 'an', 'a', 'the', 'in', 'it']\n",
     "\n",
@@ -158,7 +229,15 @@
     "In the morning glad I see; \n",
     "My foe outstretched beneath the tree.\"\"\"\n",
     "\n",
-    "# Your code here:\n"
+    "# Your code here:\n",
+    "import re\n",
+    "\n",
+    "wds_poem = re.split(';|:|,|\\.|\\s*|\\n*',poem)\n",
+    "wd_poem = ' '.join(wds_poem).split()\n",
+    "poem_ls = [element.lower() for element in wd_poem]\n",
+    "\n",
+    "v_words = [x for x in poem_ls if x not in blacklist]\n",
+    "print(v_words)\n"
    ]
   },
   {
@@ -172,14 +251,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 237,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['T', 'P']"
+      ]
+     },
+     "execution_count": 237,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "poem = \"\"\"The apparition of these faces in the crowd;\n",
     "Petals on a wet, black bough.\"\"\"\n",
     "\n",
-    "# Your code here:\n"
+    "# Your code here:\n",
+    "mayus = re.findall(r'[A-Z]',poem)\n",
+    "mayus"
    ]
   },
   {
@@ -191,13 +283,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 276,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['123abc', 'abc123', 'JohnSmith1', 'ABBY4']\n"
+     ]
+    }
+   ],
    "source": [
     "data = ['123abc', 'abc123', 'JohnSmith1', 'ABBY4', 'JANE']\n",
     "\n",
-    "# Your code here:\n"
+    "# Your code here:\n",
+    "import re\n",
+    "output = []\n",
+    "\n",
+    "for num in data:\n",
+    "    if re.search('\\d+.\\w+|\\w+.\\d',num):\n",
+    "         output.append(num)\n",
+    "    \n",
+    "print(output)"
    ]
   },
   {
@@ -213,13 +321,38 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 277,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['123abc', 'abc123', 'JohnSmith1']\n"
+     ]
+    }
+   ],
+   "source": [
+    "data = ['123abc', 'abc123', 'JohnSmith1', 'ABBY4', 'JANE']\n",
+    "# Your code here:\n",
+    "import re\n",
+    "output = []\n",
+    "\n",
+    "for num in data:\n",
+    "    if re.search('\\d+.[a-z]|[a-z].\\d',num):\n",
+    "         output.append(num)\n",
+    "    \n",
+    "print(output)\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "data = ['123abc', 'abc123', 'JohnSmith1', 'ABBY4', 'JANE']\n",
-    "# Your code here:\n"
-   ]
+   "source": []
   }
  ],
  "metadata": {
@@ -238,7 +371,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.5.2"
   }
  },
  "nbformat": 4,
