--- a/module-1/lab-string-operations/your-code/challenge-2.ipynb
+++ b/module-1/lab-string-operations/your-code/challenge-2.ipynb
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -129,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -167,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -189,22 +189,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[['ironhack', 'is', 'cool', 'i', 'love', 'ironhack', 'i', 'am', 'a', 'student', 'at', 'ironhack']]\n"
+      "['ironhack is cool i love ironhack i am a student at ironhack']\n"
      ]
     }
    ],
    "source": [
-    "\n",
+    "corpus3 = \" \".join(corpues2)\n",
     "\n",
     "bag_of_words = []\n",
-    "bag_of_words.append(corpues2)\n",
+    "bag_of_words.append(corpus3)\n",
     "\n",
     "print(bag_of_words)"
    ]
@@ -227,7 +227,18 @@
    "outputs": [],
    "source": [
     "# Write your code here\n",
-    "corpus.split()\n"
+    "freq = []\n",
+    "\n",
+    "corpus3.split()\n",
+    "for i in corpus3:\n",
+    "    x=0\n",
+    "    for e in bag_of_words:\n",
+    "        if e in i:\n",
+    "            x+=1\n",
+    "            print(bag_of_words)\n",
+    "    \n",
+    "    \n",
+    "    "
    ]
   },
   {
