--- a/module-1/lab-advanced-regex/your-code/main.ipynb
+++ b/module-1/lab-advanced-regex/your-code/main.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,10 +36,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['i',\n",
+       " 'i',\n",
+       " 'o',\n",
+       " 'i',\n",
+       " 'o',\n",
+       " 'e',\n",
+       " 'a',\n",
+       " 'e',\n",
+       " 'e',\n",
+       " 'e',\n",
+       " 'i',\n",
+       " 'a',\n",
+       " 'o',\n",
+       " 'o',\n",
+       " 'u',\n",
+       " 'e',\n",
+       " 'o',\n",
+       " 'o',\n",
+       " 'e',\n",
+       " 'i',\n",
+       " 'i']"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "re.findall('[aeiou]', text)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -59,10 +92,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['puppy', 'puppy']\n",
+      "['puppies']\n"
+     ]
+    }
+   ],
+   "source": [
+    "import re\n",
+    "text = \"The puppy saw all the rest of the puppies playing and wanted to join them. I saw this and wanted a puppy of my own!\"\n",
+    "print(re.findall('puppy', text)) #me saca la palabra puppy\n",
+    "print(re.findall('puppies', text)) #me saca la palabra puppies"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -82,10 +129,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['run']\n",
+      "['ran']\n"
+     ]
+    }
+   ],
+   "source": [
+    "text = \"I ran the relay race the only way I knew how to run it.\"\n",
+    "print(re.findall('run', text))\n",
+    "print(re.findall('ran', text))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -96,10 +156,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 51,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['r', 'r', 'r', 'r']\n"
+     ]
+    }
+   ],
+   "source": [
+    "text = \"I ran the relay race the only way I knew how to run it.\"\n",
+    "result = re.findall(\"r\",text)\n",
+    "print(result)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -349,7 +421,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.0"
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
