--- a/module-1/lab-string-operations/your-code/challenge-2.ipynb
+++ b/module-1/lab-string-operations/your-code/challenge-2.ipynb
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -169,15 +169,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['ironhack is cool', 'i love ironhack', 'i am a student at ironhack']\n"
+     ]
+    }
+   ],
    "source": [
     "# Write your code here\n",
     "#for d in corpus:\n",
     "  #  print([d.lower().replace(\".\",\"\")])\n",
     "\n",
-    "a = ([d.lower().replace(\".\",\"\")for d in corpus])"
+    "a = ([d.lower().replace(\".\",\"\")for d in corpus])\n",
+    "print(a)"
    ]
   },
   {
@@ -189,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -209,23 +218,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['ironhack', 'is', 'cool', 'i', 'love', 'am', 'a', 'student', 'at']\n"
+      "['ironhack', 'is', 'cool', 'i', 'love', 'ironhack', 'i', 'am', 'a', 'student', 'at', 'ironhack']\n"
      ]
     }
    ],
    "source": [
     "# Write your code here\n",
     "b = ' '.join(a).split()\n",
+    "\n",
+    "\n",
     "for i in b:\n",
     "    if not i in bag_of_words:\n",
     "        bag_of_words.append(i)\n",
+    "    \n",
+    "print(b)\n",
+    "\n",
     "\n"
    ]
   },
@@ -242,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -266,48 +280,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "ironhack\n",
-      "is\n",
-      "cool\n",
-      "i\n",
-      "love\n",
-      "am\n",
-      "a\n",
-      "student\n",
-      "at\n",
-      "ironhack\n",
-      "is\n",
-      "cool\n",
-      "i\n",
-      "love\n",
-      "am\n",
-      "a\n",
-      "student\n",
-      "at\n",
-      "ironhack\n",
-      "is\n",
-      "cool\n",
-      "i\n",
-      "love\n",
-      "am\n",
-      "a\n",
-      "student\n",
-      "at\n"
+      "[1, 1, 1, 0, 0, 0, 0, 0, 0, 1, 0, 0, 1, 1, 0, 0, 0, 0, 1, 0, 0, 1, 0, 1, 1, 1, 1]\n"
      ]
     }
    ],
    "source": [
-    "term_freq = []\n",
-    "for h in corpus:\n",
+    "lst=[]\n",
+    "\n",
+    "for a_split in a:\n",
+    "    lst2=[]\n",
+    "    \n",
     "    for r in bag_of_words:\n",
-    "        print(r)"
+    "        if r in a_split.split():\n",
+    "            lst.append(1)\n",
+    "        else:\n",
+    "            lst.append(0)\n",
+    "            \n",
+    "print(lst)"
    ]
   },
   {
@@ -325,10 +321,14 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[]\n"
+     "ename": "NameError",
+     "evalue": "name 'term_freq' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-9-c9f15b06bdd7>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mterm_freq\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m: name 'term_freq' is not defined"
      ]
     }
    ],
@@ -379,7 +379,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
