--- a/module-1/lab-string-operations/your-code/challenge-2.ipynb
+++ b/module-1/lab-string-operations/your-code/challenge-2.ipynb
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -98,8 +98,7 @@
      "text": [
       "['ironhack is cool ', 'i love ironhack ', 'i am a student at ironhack ']\n",
       "[['ironhack ', 'is ', 'cool '], ['i ', 'love ', 'ironhack '], ['i ', 'am ', 'a ', 'student ', 'at ', 'ironhack ']]\n",
-      "[['ironhack', 'is', 'cool'], ['i', 'love', 'ironhack'], ['i', 'am', 'a', 'student', 'at', 'ironhack']]\n",
-      "[]\n"
+      "[['ironhack', 'is', 'cool'], ['i', 'love', 'ironhack'], ['i', 'am', 'a', 'student', 'at', 'ironhack']]\n"
      ]
     }
    ],
@@ -131,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -185,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -205,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -247,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -271,15 +270,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "can't assign to function call (<ipython-input-106-32f139ff795c>, line 10)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-106-32f139ff795c>\"\u001b[0;36m, line \u001b[0;32m10\u001b[0m\n\u001b[0;31m    for int(e) in range(len(result[i])):\u001b[0m\n\u001b[0m       ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m can't assign to function call\n"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[['ironhack ', 'is ', 'cool '], ['i ', 'love ', 'ironhack '], ['i ', 'am ', 'a ', 'student ', 'at ', 'ironhack ']]\n",
+      "[['ironhack', 'is', 'cool'], ['i', 'love', 'ironhack'], ['i', 'am', 'a', 'student', 'at', 'ironhack']]\n"
      ]
     }
    ],
@@ -292,22 +291,7 @@
     "result = [''.join(sub).split() for sub in v]\n",
     "print(result)\n",
     "\n",
-    "for i in result:\n",
-    "    for e in range(len(result[i])):\n",
-    "        if result[i][e] in bag_of_words:\n",
-    "            term_freq.append(1)\n",
-    "        else:\n",
-    "            term_freq_append(0)\n",
-    "        \n",
-    "        \n",
     "\n",
-    "for i in bag_of_words:\n",
-    "    for e in result:\n",
-    "        for x in e:\n",
-    "            if x in bag_of_words:\n",
-    "                term_freq.append(1)\n",
-    "            else:\n",
-    "                term_freq.append(0)\n",
     "# Write your code here"
    ]
   },
