--- a/module-1/lab-string-operations/your-code/challenge-2.ipynb
+++ b/module-1/lab-string-operations/your-code/challenge-2.ipynb
@@ -207,11 +207,15 @@
     "corpus_lower_string = ' '.join(corpus_lower).split(\" \")\n",
     "bag_of_words= []\n",
     "for i in corpus_lower_string:\n",
-    "    if i not in bag_of_words:\n",
-    "         \n",
+    "    if i not in bag_of_words:   \n",
     "            \n",
     "        bag_of_words.append(i)\n",
     "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "    \n",
     "print(bag_of_words)\n",
     "\n",
     "\n",
@@ -260,34 +264,66 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 109,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0, 0, 0, 0, 0, 0, 0, 0, 1, 1, 2, 2, 2, 2]\n",
-      "['ironhack', 'is', 'cool', 'i', 'love', 'am', 'a', 'student', 'at']\n",
-      "['k', 's', 'l']\n"
+      "corpus ['ironhack is cool', 'i love ironhack', 'i am a student at ironhack']\n",
+      "bag ['ironhack', 'is', 'cool', 'i', 'love', 'am', 'a', 'student', 'at']\n",
+      "['ironhack', 'is', 'cool']\n"
+     ]
+    },
+    {
+     "ename": "TypeError",
+     "evalue": "'int' object is not subscriptable",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-109-42ebb7c4894c>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     11\u001b[0m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     12\u001b[0m     \u001b[0;32mfor\u001b[0m \u001b[0ma\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 13\u001b[0;31m         \u001b[0;32mif\u001b[0m \u001b[0ma\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mbag_of_words\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     14\u001b[0m             \u001b[0mterm_freq\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     15\u001b[0m         \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mTypeError\u001b[0m: 'int' object is not subscriptable"
      ]
     }
    ],
    "source": [
     "#term_freq=[count(corpus_lower[i]) for i in range(len(corpus_lower)) for corpus_lower[i] in bag_of_words[i]]\n",
+    "#print(bag_of_words)\n",
+    "print(\"corpus\", corpus_lower) \n",
+    "print(\"bag\", bag_of_words)\n",
     "\n",
     "term_freq = []\n",
-    "for i in range(len(corpus_lower)):\n",
-    "    for corpus_lower[i] in bag_of_words[i]:\n",
-    "        term_freq.append(i)\n",
-    "      \n",
-    "   \n",
+    "lst = []\n",
+    "for i in corpus_lower:\n",
+    "    lst.append(i.split(\" \"))\n",
+    "for i in lst:\n",
+    "    print(i)\n",
+    "    for a in range(len(i)):\n",
+    "        if a[i] in bag_of_words[i]:\n",
+    "            term_freq.append(1)\n",
+    "        else:\n",
+    "            term_freq.append(0)\n",
+    "\n",
+    "  \n",
+    "print(lst)   \n",
+    "    \n",
+    "    \n",
+    "    #lst12 = [i.split(\" \")] \n",
+    "    #if a in lst12:\n",
     "        \n",
-    "print(term_freq)  \n",
+    "\n",
+    "#print('lst12', lst12)\n",
+    "\n",
+    "\n",
+    "\n",
+    "    \n",
+    "print(\"term\", term_freq)\n",
     "\n",
     " \n",
-    "print(bag_of_words)\n",
-    "print(corpus_lower)\n",
+    "#print(bag_of_words)\n",
+    "#print(corpus_lower)\n",
     "# Write your code here"
    ]
   },
