--- a/module-1/lab-string-operations/your-code/challenge-2.ipynb
+++ b/module-1/lab-string-operations/your-code/challenge-2.ipynb
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -118,9 +118,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Ironhack is cool.', 'I love Ironhack.', 'I am a student at Ironhack.']\n"
+     ]
+    }
+   ],
    "source": [
     "print(corpus)"
    ]
@@ -148,11 +156,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "a = ([i.lower().replace(\".\",\"\")for i in corpus])"
+    "a = ([i.lower().replace(\".\",\"\")for i in corpus])\n"
    ]
   },
   {
@@ -164,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -184,14 +192,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
     "b = ' '.join(a).split()\n",
     "for i in b:\n",
     "    if not i in bag_of_words:\n",
-    "        bag_of_words.append(i)\n"
+    "        bag_of_words.append(i)"
    ]
   },
   {
@@ -207,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -231,26 +239,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['ironhack', 'is', 'cool', 'i', 'love', 'am', 'a', 'student', 'at', 'ironhack', 'is', 'cool', 'i', 'love', 'am', 'a', 'student', 'at', 'ironhack', 'is', 'cool', 'i', 'love', 'am', 'a', 'student', 'at']\n"
+      "[[1, 0, 0, 0, 0, 0, 0, 0, 0], [0, 1, 0, 0, 0, 0, 0, 0, 0], [0, 0, 1, 0, 0, 0, 0, 0, 0], [0, 0, 0, 1, 0, 0, 0, 0, 0], [0, 0, 0, 0, 1, 0, 0, 0, 0], [1, 0, 0, 0, 0, 0, 0, 0, 0], [0, 0, 0, 1, 0, 0, 0, 0, 0], [0, 0, 0, 0, 0, 1, 0, 0, 0], [0, 0, 0, 0, 0, 0, 1, 0, 0], [0, 0, 0, 0, 0, 0, 0, 1, 0], [0, 0, 0, 0, 0, 0, 0, 0, 1], [1, 0, 0, 0, 0, 0, 0, 0, 0]]\n"
      ]
     }
    ],
    "source": [
+    "\n",
     "term_freq = []\n",
-    "for i in range(len(corpus)):\n",
-    "    x= 0\n",
+    "\n",
+    "for i in b:\n",
+    "    lista1=[]\n",
     "    for e in bag_of_words:\n",
-    "        if e in bag_of_words:\n",
-    "            term_freq.append(e)\n",
-    "            \n",
+    "        if e in i.split(' '):\n",
+    "            lista1.append(1)\n",
+    "        else:\n",
+    "            lista1.append(0)\n",
+    "    term_freq.append(lista1)\n",
     "print (term_freq)\n",
+    "#[ i if w in set(corupus) esle 0 for w in corpus]\n",
     "# Write your code here"
    ]
   },
