--- a/module-1/lab-string-operations/your-code/challenge-2.ipynb
+++ b/module-1/lab-string-operations/your-code/challenge-2.ipynb
@@ -222,9 +222,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['i', 'r', 'o', 'n', 'h', 'a', 'c', 'k', ' ', 'i', 's', ' ', 'c', 'o', 'o', 'l', ' ', 'i', ' ', 'l', 'o', 'v', 'e', ' ', 'i', 'r', 'o', 'n', 'h', 'a', 'c', 'k', ' ', 'i', ' ', 'a', 'm', ' ', 'a', ' ', 's', 't', 'u', 'd', 'e', 'n', 't', ' ', 'a', 't', ' ', 'i', 'r', 'o', 'n', 'h', 'a', 'c', 'k']\n"
+     ]
+    }
+   ],
    "source": [
     "# Write your code here\n",
     "freq = []\n",
@@ -236,7 +244,8 @@
     "        if e in i:\n",
     "            x+=1\n",
     "            print(bag_of_words)\n",
-    "    \n",
+    "lst = [i for i in corpus3 if i not in bag_of_words]\n",
+    "print(lst)\n",
     "    \n",
     "    "
    ]
